--- a/HW3/public/style.css
+++ b/HW3/public/style.css
@@ -1,36 +1,30 @@
-/*
-   Copyright 2016, Google, Inc.
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-       http://www.apache.org/licenses/LICENSE-2.0
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
-*/
-
 body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
 }
 .bgr-img {
-  background-image: url("./polaroid_photos_by_niclas3105-d5frocq.png");
+  background-image: url("./file.png");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.bgr-img-logged {
+  background-image: url("./logged.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
 }
 
 .login {
   float: right;
   margin:1rem;
-  background-color: antiquewhite;
+  background-color: white;
+  
 
 }
 
  .home-message{
-  color: yellow;
-   font-size: 3rem;
+  color: white;
 }
 
 .home-message-div {
@@ -50,6 +44,8 @@ header {
 
 nav {
   margin-bottom: 10px;
+  padding: 10px;
+  font-size: 20px;
 }
 
 nav a {
@@ -57,16 +53,23 @@ nav a {
   margin-right: 10px;
 }
 
-#account span, #account img {
-  display: block;
-  margin: 0 auto;
+nav span {
+  display: inline-block;
+  margin: 0 0 10px 0;
+}
+
+nav img {
+  margin: 0 10px 10px 0;
+  display: inline-block;
+  border-radius: 50%;
 }
 
 #add-book {
   display: inline-block;
   padding: 10px;
-  margin: 20px auto;
+  margin: 20px 50px;
   width: 350px;
+  vertical-align: top;
 }
 
 #add-book label {
@@ -98,6 +101,7 @@ nav a {
   display: block;
   max-width: 150px;
   max-height: 200px;
+  margin: 0 0 10px 0px;
 }
 
 .book .info {
@@ -126,4 +130,32 @@ nav a {
 #photos {
   display: inline-block;
   width:50%;
+  vertical-align: top;
+  padding: 10px;
+  margin: 20px auto;
+  background-color: white;
+  border-radius: 3px;
+  min-height: 400px;
+}
+
+.content {
+  padding:10px;
+}
+
+.bold {
+  font-weight: bold;
+  margin-left:5px;
+}
+
+hr {
+  border-color: white;
+}
+
+.home-message-div h1 {
+  font-size: 60px;
+  margin: 0 0 30px 0px;
+}
+
+.home-message-div h4 {
+  font-size: 20px;
 }
